svgs and more html
more html setup, added svgs

--- a/index.html
+++ b/index.html
@@ -37,38 +37,54 @@
 
 
       <section class="courses">
-        <h2>
-          Check out our most popular courses!
-        </h2>
+        <div class="card">
+          <h2>
+            Check out our most popular courses!
+          </h2>
+        </div>
 
-        <h3>Animation</h3>
-        <p class="body">Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
-        <a href="#" class="text-link">Get Started</a>
+        <div class="card">
+          <h3>Animation</h3>
+          <img src="assets/icon-animation.svg" alt="">
+          <p class="body">Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+          <a href="#" class="text-link">Get Started</a>
+        </div>
 
-        <h3>Design</h3>
-        <p class="body">
-          Create beautiful, usable interfaces to help shape the future of
-          how the web looks.
-        </p>
-        <a href="#" class="text-link">Get Started</a>
-        <h3>Photography</h3>
-        <p class="body">
-          Explore critical fundamentals like lighting, composition, and focus
-          to capture exceptional photos.
-        </p>
-        <a href="#" class="text-link">Get Started</a>
-        <h3>Crypto</h3>
-        <p class="body">
-          All you need to know to get started investing in crypto. Go from beginner
-          to advanced with this 54 hour course.
-        </p>
-        <a href="#" class="text-link">Get Started</a>        
-        <h3>Business</h3>
-        <p class="body">
-          A step-by-step playbook to help you start, scale, and sustain your business
-          without outside investment.
-        </p>
-        <a href="#" class="text-link">Get Started</a>      
+        <div class="card">
+          <h3>Design</h3>
+          <img src="assets/icon-design.svg" alt="">
+          <p class="body">
+            Create beautiful, usable interfaces to help shape the future of how the web looks.
+          </p>
+          <a href="#" class="text-link">Get Started</a>
+        </div>
+
+        <div class="card">
+          <h3>Photography</h3>
+          <img src="assets/icon-photography.svg" alt="">
+          <p class="body">
+            Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.
+          </p>
+          <a href="#" class="text-link">Get Started</a>
+        </div>
+
+        <div class="card">
+          <h3>Crypto</h3>
+          <img src="assets/icon-crypto.svg" alt="">
+          <p class="body">
+            All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.
+          </p>
+          <a href="#" class="text-link">Get Started</a>
+        </div>     
+
+        <div class="card">
+          <h3>Business</h3>
+          <img src="assets/icon-business.svg" alt="">
+          <p class="body">
+            A step-by-step playbook to help you start, scale, and sustain your business without outside investment.
+          </p>
+          <a href="#" class="text-link">Get Started</a>
+        </div>    
       </section>
     </div>
   </main>
