--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
   <main>
     <div class="wrapper">
       <section class="intro">
-        <h1>Maximize skill, minimize budget</h1>
+        <h1 class="intro-header">Maximize skill, minimize budget</h1>
         <p class="body">
           Our modern courses across a range of in-demand skills will give you the
           knowledge you need to live the life you want.
         </p>
         <a href="#" class="btn btn-sunrise">Get Started</a>
+        <img src="assets/image-hero-mobile.webp" class="hero-image" alt="null">
+
       </section>
 
 
