--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="wrapper">
       <section class="intro">
         <h1 class="intro-header">Maximize skill, minimize budget</h1>
-        <p class="body">
+        <p class="text-body">
           Our modern courses across a range of in-demand skills will give you the
           knowledge you need to live the life you want.
         </p>
@@ -47,15 +47,15 @@
 
         <div class="card">
           <h3>Animation</h3>
-          <img src="assets/icon-animation.svg" alt="">
-          <p class="body">Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+          <img src="assets/icon-animation.svg" class="icon" alt="">
+          <p class="text-body">Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
           <a href="#" class="text-link">Get Started</a>
         </div>
 
         <div class="card">
           <h3>Design</h3>
-          <img src="assets/icon-design.svg" alt="">
-          <p class="body">
+          <img src="assets/icon-design.svg" class="icon" alt="">
+          <p class="text-body">
             Create beautiful, usable interfaces to help shape the future of how the web looks.
           </p>
           <a href="#" class="text-link">Get Started</a>
@@ -63,8 +63,8 @@
 
         <div class="card">
           <h3>Photography</h3>
-          <img src="assets/icon-photography.svg" alt="">
-          <p class="body">
+          <img src="assets/icon-photography.svg" class="icon" alt="">
+          <p class="text-body">
             Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.
           </p>
           <a href="#" class="text-link">Get Started</a>
@@ -72,8 +72,8 @@
 
         <div class="card">
           <h3>Crypto</h3>
-          <img src="assets/icon-crypto.svg" alt="">
-          <p class="body">
+          <img src="assets/icon-crypto.svg" class="icon" alt="">
+          <p class="text-body">
             All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.
           </p>
           <a href="#" class="text-link">Get Started</a>
@@ -81,8 +81,8 @@
 
         <div class="card">
           <h3>Business</h3>
-          <img src="assets/icon-business.svg" alt="">
-          <p class="body">
+          <img src="assets/icon-business.svg" class="icon" alt="">
+          <p class="text-body">
             A step-by-step playbook to help you start, scale, and sustain your business without outside investment.
           </p>
           <a href="#" class="text-link">Get Started</a>
@@ -92,7 +92,7 @@
   </main>
 
   <footer>
-    <div class="wrapper">
+    <div class="wrapper footer-nav">
       <a href="/"><img src="assets/logo-light.svg" alt="skilled - home"></a>
       <a href="#" class="btn btn-sunset">Get Started</a>
     </div>
