added line break

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <main>
     <div class="wrapper">
       <section class="intro">
-        <h1 class="intro-header">Maximize skill, minimize budget</h1>
+        <h1 class="intro-header">Maximize skill,<br> minimize budget</h1>
         <p class="text-body">
           Our modern courses across a range of in-demand skills will give you the
           knowledge you need to live the life you want.
